--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "epilogue-association-write",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "A helper for epilogue and sequelize",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version",
+    "build": "babel index.js -d dist/"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,10 @@
   "dependencies": {
     "debug": "^2.2.0",
     "lodash": "^4.16.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
+    "standard-version": "^3.0.0"
   }
 }
