--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "epilogue-association-write",
   "description": "A helper for epilogue and sequelize",
-  "version": null,
+  "version": "0.2.0",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
